--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-RUN pip install requests flask dotenv
+RUN pip install requests flask dotenv pika pymongo=='4.11.3' schedule
 
 COPY . .
 
